replace MappingTask::getTaskByType with MappingsTask::getTaskNamed; tasks should not be retreived by type alone, adding a new task with the same type would break things (most calls to MappingsTask::getTaskNamed will probably be eliminated when configuration is moved to MappingsPlugin) the thisening the abstractening the finalening the line wrappening